# eastmoney

./: .gitignore  .mcp.json  DOC.md  Dockerfile  MANIFEST.in  PYPI_PUBLISH_PLAN.md  README.md  README_zh.md  cli.py  eastmoney.py  gui.bat  index.html  industry.csv  industry.json  mcp_server.py  mcp_server_fastmcp.py  meta.json  pdf_downloader.py  pyproject.toml  report  report.bat  report_client.py  requirements.txt  testitem.py  utils.py  保险.csv  保险.json  房地产服务.csv  行业研报.csv  行业研报.json
.github/workflows/: eastmoney.yml  main.yml  publish.yml  release.yml
.workbuddy/: expert-history.json
.workbuddy/memory/: MEMORY.md
.workbuddy/plans/: 东方财富研报命令行工具_2d1e08c0.md
gui/: __init__.py  main.py  main_window.py
gui/utils/: __init__.py  download_manager.py
gui/widgets/: __init__.py
new/全行业/: 全行业.csv
new/房地产服务/: 房地产服务.csv
new/电机/: 电机.csv
src/eastmoney/: __init__.py  __main__.py  cli.py  mcp_server.py  report_client.py
src/eastmoney/data/: industry.json
